--- a/WifiMonitor/Views/MainWindow.xaml
+++ b/WifiMonitor/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <ListView x:Name="lv" d:ItemsSource="{d:SampleData ItemCount=1}" Margin="0,49,0,0" SelectionChanged="lv_SelectionChanged">
+        <ListView x:Name="lv" Margin="0,49,0,0" SelectionChanged="lv_SelectionChanged" RenderTransformOrigin="0.506,0.533">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="40" >
@@ -42,6 +42,7 @@
                     <GridViewColumn Header="Mode" Width="40" DisplayMemberBinding="{Binding Mode}"/>
                 </GridView>
             </ListView.View>
+
         </ListView>
 
     </Grid>
