--- a/WifiMonitor/Views/MainWindow.xaml
+++ b/WifiMonitor/Views/MainWindow.xaml
@@ -5,28 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WifiMonitor"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="MainWindow" Height="450" Width="922"
+        HorizontalAlignment="Stretch"
         Loaded="Window_Loaded">
-    <Grid>
-        <ListView x:Name="lv" d:ItemsSource="{d:SampleData ItemCount=1}" Margin="0,49,0,0" SelectionChanged="lv_SelectionChanged">
+    <Grid HorizontalAlignment="Stretch">
+        <ListView x:Name="lv" d:ItemsSource="{d:SampleData ItemCount=1}" Margin="0,49,0,0" HorizontalAlignment="Stretch">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Width="40" >
+                    <GridViewColumn Width="30" >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <CheckBox  Checked="CheckBox_Checked" Background="{Binding Color}">
+                                <CheckBox Background="{Binding Color}">
                                     <TextBlock  Text="{Binding BSSID }" Visibility="Hidden" />
                                 </CheckBox>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="SSID"  Width="120" DisplayMemberBinding="{Binding SSID}"/>
-                    <GridViewColumn Header="BSSID"  Width="120" DisplayMemberBinding="{Binding BSSID}"/>
-                    <GridViewColumn Header="Signal" Width="40" DisplayMemberBinding="{Binding Signal}"/>
-                    <GridViewColumn Header="%"  Width="40" DisplayMemberBinding="{Binding Percentage}"/>
-                    <GridViewColumn Header="Min."  Width="40" DisplayMemberBinding="{Binding Min}"/>
-                    <GridViewColumn Header="Max."  Width="40" DisplayMemberBinding="{Binding Max}"/>
-                    <GridViewColumn Header="Average"  Width="50" DisplayMemberBinding="{Binding Average}"/>
+                    <GridViewColumn Header="SSID"  Width="200" DisplayMemberBinding="{Binding SSID}"/>
+                    <GridViewColumn Header="BSSID"  Width="150" DisplayMemberBinding="{Binding BSSID}"/>
+                    <GridViewColumn Header="Signal" Width="Auto" DisplayMemberBinding="{Binding Signal}"/>
+                    <GridViewColumn Header="%"  Width="Auto" DisplayMemberBinding="{Binding Percentage}"/>
+                    <GridViewColumn Header="Min."  Width="Auto" DisplayMemberBinding="{Binding Min}"/>
+                    <GridViewColumn Header="Max."  Width="Auto" DisplayMemberBinding="{Binding Max}"/>
+                    <GridViewColumn Header="Average"  Width="Auto" DisplayMemberBinding="{Binding Average}"/>
                     <GridViewColumn Header="Level"  >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
@@ -44,6 +45,14 @@
                 </GridView>
             </ListView.View>
         </ListView>
+
+        <ComboBox x:Name="cbInterval" SelectionChanged="cbInterval_OnChange"
+                  HorizontalAlignment="Left" Margin="670,10,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBoxItem Content="5 seconds"  IsSelected="True"/>
+            <ComboBoxItem Content="10 seconds"/>
+            <ComboBoxItem Content="30 seconds"/>
+            <ComboBoxItem Content="60 seconds"/>
+        </ComboBox>
 
     </Grid>
 </Window>
