--- a/WifiMonitor/Views/TabularData1.xaml
+++ b/WifiMonitor/Views/TabularData1.xaml
@@ -21,7 +21,7 @@
                         <ColumnDefinition Width="787*"/>
                         <ColumnDefinition Width="7*"/>
                     </Grid.ColumnDefinitions>
-                    <ListView x:Name="lv" d:ItemsSource="{d:SampleData ItemCount=4}">
+                    <ListView x:Name="lv" d:ItemsSource="{d:SampleData ItemCount=4}" Margin="0,52,0,-9">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Time"  Width="120" DisplayMemberBinding="{Binding DetectedTime}"/>
@@ -31,9 +31,9 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-
-
-
+                    <StackPanel>
+                        <Button Content="Export" Margin="10" Width="100" Height="30" Click="Export_Click"/>
+                    </StackPanel>
                 </Grid>
 
             </TabItem>
